--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello, world"
-      - uses: actions/checlout@v4
+      - uses: actions/checkout@v4
