--- a/.github/workflows/choice.yaml
+++ b/.github/workflows/choice.yaml
@@ -13,4 +13,4 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Selected log level: ${{ inputs['log-level'] }}"
+      - run: echo "Selected log level ${{ inputs['log-level'] }}"
